static/styles/settings.css
/* ... */
.bots_list .image {
    vertical-align: top;
    width: calc(100% - 85px);
}

.bots_list .bot-information-box .details {
    display: inline-block;
}

.bots_list .name {
    font-weight: 600;
    font-size: 1.3rem;
    margin: 10px 0px 5px 0px;

    overflow: hidden;
    max-height: 1em;
    text-overflow: ellipsis;
    white-space: pre;
}

.bots_list .regenerate_bot_api_key {
    position: relative;
    margin-left: 5px;
    color: #aaa;
    transition: all 0.3s ease;
}

.bots_list .regenerate_bot_api_key:hover {
    color: #444;
}

.bots_list .edit-bot-buttons {
    padding-top: 5px;
}

.bots_list .edit-bot-buttons button {
    background-color: transparent;
}

.bots_list .edit-bot-buttons .btn {
    padding: 4px;
}

.bots_list .edit-bot-buttons .sea-green {
    color: #24cac2;
}

.bots_list .edit-bot-buttons .blue {
    color: #3ba4e6;
}

.bots_list .edit-bot-buttons .danger-red {
    color: #e29595;
}

.bots_list .bot-information-box {
    position: relative;
    display: inline-block;
    width: calc(33.3% - 10px);
    max-height: 180px;
    margin: 5px;

    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 4px;
    box-sizing: border-box;

    overflow: auto;
}

.bots_list img.avatar {
    margin: 10px 5px 10px 10px;
    height: 50px;
    width: 50px;
    border-radius: 4px;
    vertical-align: top;
    box-shadow: 0px 0px 4px rgba(0,0,0,0.1);
}

.bots_list .email {
    margin-bottom: 5px;
}

.bots_list .email .value,
.bots_list .api_key .api-key-value-and-button {
    display: block;
    margin-left: 0px;
    white-space: -moz-pre-wrap !important;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
    white-space: normal;
}

.bots_list .api_key .api-key-value-and-button {
    font-family: "Inconsolata", Menlo, monospace;
    font-size: 0.85em;
}

.bots_list .bot_info {
    padding: 10px;
}

.bot_info .field {
    font-weight: 300;
    text-transform: uppercase;
    font-weight: 600;
    color: #aaa;
}

.edit_bot h3 {
    margin: 0px;
    font-weight: 400;
}

#bots_lists_navbar .active a {
    background-color: #FAFAFA;
}

#inactive_bots_list .bot_info .reactivate_bot {
    margin-top: 5px;
}

.edit_bot_form {
    font-size: 100%;
    margin: 0px;
    padding: 0px;
}

.edit_bot_form label {
    text-transform: uppercase;
    font-weight: 600;
    color: #aaa;
    margin-top: 5px;
}

.edit_bot_form .buttons {
    margin: 10px 0px 5px 0px;
}

.edit_bot_email {
    font-weight: 400;
    font-size: 18px;
    text-align: left;
    margin-top: 0px;
    margin-bottom: 10px;

    overflow: hidden;
    max-height: 1.1em;
    text-overflow: ellipsis;
    white-space: pre;
}

#create_bot_form .control-label,
#create_alert_word_form .control-label,
#get_api_key_box .control-label,
.admin-emoji-form .control-label,
.admin-filter-form .control-label,
.default-stream-form .control-label,
.edit_bot_form .control-label {
    width: 10em;
    text-align: right;
    margin-right: 20px;
}

#upload_avatar_spinner,
#upload_icon_spinner {
    font-size: 14px;
    margin: auto;
}

.bot_name_header {
    width: 8em;
}

#empty_alert_word_error {
    display: none;
    width: 90%;
    margin: 0 auto;
    margin-bottom: 15px;
    padding: 10px;
}

#empty_alert_word_error .close {
    position: inherit;
}

#alert_words_list,
#attachments_list {
    list-style-type: none;
    margin: auto;
    background-color: #fff;
}

#alert_words_list li.alert-word-item:last-child {
    background: none;
    margin-top: 8px;
}

#alert_words_list .edit-alert-word-buttons,
#attachments_list .edit-attachment-buttons {
    position: absolute;
    right: 20px;
    top: 5px;
}

#alert_words_list .alert_word_listing .value {
    display: block;
    white-space: -moz-pre-wrap !important;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
    white-space: normal;
}

.open-user-form {
    min-width: initial !important;
}

#user-settings-avatar {
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    width: 200px;
    height: 200px;
}

#realm-settings-icon {
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    width: 100px;
    height: 100px;
    margin-left: 25%;
}
/* -- new settings overlay -- */
#settings_page {
    min-height: 550px;
}

#settings_page {
    height: 95vh;
    width: 97vw;
    margin: 2.5vh 1.5vw;
    background-color: #fff;
    overflow: hidden;
    border-radius: 4px;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    transition: transform 0.2s ease;
}

#settings_page .sidebar {
    float: left;
    position: relative;
    width: 250px;
    height: 100%;
    min-height: 550px;
    overflow-y: auto;
    border-top-left-radius: 4px;
    border-right: 1px solid #eee;
}

#settings_page .sidebar .tab-container {
    background-color: #fff;
    padding: 6px;
    border-bottom: 1px solid #ddd;
}

#settings_page .sidebar .settings-list {
    position: relative;
    z-index: 3;
}

#settings_page .content-wrapper {
    position: absolute;
    left: 251px;
    /* the width of the settings sidbar this is right of is 250px + 1px border. */
    width: calc(100% - 250px - 1px);
    height: 100%;
    overflow: hidden;
}

#settings_page .content-wrapper .settings-header {
    width: 100%;
    height: 43px;
    border-bottom: 1px solid #ddd;
}

#settings_page .content-wrapper #settings_content {
    width: 100%;
    height: calc(100% - 45px);

    float: left;
    overflow-y: auto;
}

#settings_page .form-sidebar {
    position: absolute;
    top: 45px;
    right: 0px;
    transform: translateX(303px);
    width: 300px;
    height: calc(100% - 45px);

    background-color: #fff;
    border-left: 1px solid #ddd;

    pointer-events: none;
    transition: all 0.3s ease;
}
/* ... */

